[Fix] right white space when display in small device

--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ header {
 }
 
 .main-content {
-  width: 400px;
+  max-width: 400px;
   color: white;
   padding: 40px 20px;
   height: 50vh;
